Used jdbc template to insert the data